<resources>
    <string name="app_name">CheckMyMeal</string>
    <string name="facebook_app_id">587220881654703</string>
    <string name="fb_login_protocol_scheme">fb587220881654703</string>
    <string name="nextButton">Next</string>
    <string name="Name">Enter your name:</string>
    <string name="NameSpace" />
    <string name="Gender">Choose your gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Weight">How much do you weight?</string>
    <string name="Height">How tall are you?</string>
    <string name="imageView" />
    <string name="Hi">Hi</string>
    <string name="breakfast">Breakfast</string>

    <string-array name="BreakfastArray">
        <item> Select Breakfast</item>
        <item> Porridge - 50cals</item>
        <item> Cereal - 125cals</item>
        <item> Avocado on Toast - 150cals</item>
        <item> Scrambled Egg - 150cals</item>
        <item> Smoothie - 50cals</item>
    </string-array>

    <string name="lunch">Lunch</string>
    <string-array name="LunchArray">
        <item> Select Lunch</item>
        <item> Salad - 150cals</item>
        <item> Turkey Sandwich - 150cals</item>
        <item> Soup - 80cals</item>
        <item> Chicken with Pasta - 350cals</item>
        <item> Salmon with Asparagus - 250cals</item>
    </string-array>

    <string name="dinner">Dinner</string>
    <string-array name="DinnerArray">
        <item> Select Dinner</item>
        <item> Chicken with Broccoli - 250cals</item>
        <item> Steak with Veggies - 800cals</item>
        <item> Fish with Potatoes - 500cals</item>
        <item> Chicken with Rice - 500cals</item>
        <item> Turkey with Cous-Cous - 760cals</item>
    </string-array>

    <string name="snack">Snack</string>
    <string name="ViewButton">View Meal Plan</string>
    <string name="AddButton">Add Meals</string>

    <string-array name="SnackArray">
        <item> Select Snack</item>
        <item> Veggies - 50cals</item>
        <item> Fruits - 70cals</item>
        <item> Youghurt - 40cals</item>
        <item> Nuts - 180cals</item>
        <item> Protein Bar - 150cals</item>
    </string-array>

    <string name="snack2">Snack #2</string>
    <string name="PickFoods">Please choose your meals for the today:</string>
    <string name="NameEntry">...name...</string>
    <string name="PickFood">Please choose your meals for the day:</string>
    <string name="timeid">Time</string>
    <string name="mealTime">Meal</string>
    <string name="calid">Cal</string>
    <string name="lunchtag">Lunch</string>
    <string name="snack1Tag">Snack #1</string>
    <string name="dinnerTag">Dinner</string>
    <string name="breakfastTag">Breakfast</string>
    <string name="snack2Tag">Snack #2</string>


    <string-array name="SnackArray2">
        <item> Select Snack #2</item>
        <item> Veggies - 50cals</item>
        <item> Fruits - 70cals</item>
        <item> Youghurt - 40cals</item>
        <item> Nuts - 180cals</item>
        <item> Protein Bar - 150cals</item>
    </string-array>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="addMeals">1. Add Meals</string>
    <string name="viewMeals">2. View Meal Plan</string>
    <string name="textView3">Steps taken</string>
    <string name="view_meals">View Meals</string>
    <string name="steps_counter">Steps Counter</string>
    <string name="search">search</string>
    <string name="log_in">log_in</string>
    <string name="MenuSearch">Search</string>
    <string name="meals">Meals</string>

</resources>
