<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/view_meals"
        android:orderInCategory="100"
        android:title="@string/view_meals"
        app:showAsAction="never" />

    <item
        android:id="@+id/step_counter"
        android:orderInCategory="100"
        android:title="Step Counter"
        app:showAsAction="never" />

    <item
        android:id="@+id/meals"
        android:orderInCategory="100"
        android:title="@string/meals"
        app:showAsAction="never" />

    <item
        android:id="@+id/Search"
        android:orderInCategory="100"
        android:title="@string/MenuSearch"
        app:showAsAction="never" />

    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="Log in"
        app:showAsAction="never" />
</menu>
