<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context="ie.app.checkmymeal1.Home"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/Orange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Weight" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="2dp"
        android:background="@color/buttonColor"
        android:bottomLeftRadius="20dp"
        android:bottomRightRadius="20dp"
        android:text="@string/nextButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/height" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/genderGroup"
        android:layout_marginBottom="76dp"
        android:layout_marginStart="25dp"
        android:text="@string/Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/Weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Name"
        android:layout_below="@+id/Name"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/NameSpace"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toTopOf="@+id/Name" />

    <TextView
        android:id="@+id/Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nameText"
        android:layout_below="@+id/nameText"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="41dp"
        android:text="@string/Gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/genderGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/Name"
        app:layout_constraintStart_toStartOf="@+id/Gender"
        app:layout_constraintTop_toBottomOf="@+id/Gender">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Gender"
            android:layout_toEndOf="@+id/female"
            android:layout_weight="1"
            android:text="@string/Male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Gender"
            android:layout_below="@+id/Gender"
            android:layout_weight="1"
            android:text="@string/Female" />
    </RadioGroup>

    <TextView
        android:id="@+id/Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:text="@string/Weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/Orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/Weight"
        app:layout_constraintTop_toTopOf="@+id/Orange" />

    <TextView
        android:id="@+id/Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Height"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="@+id/Orange"
        app:layout_constraintStart_toStartOf="@+id/height"
        app:layout_constraintTop_toTopOf="@+id/Orange" />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Height" />


</android.support.constraint.ConstraintLayout>
